--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ school_misspellings.ipynb
 data_structure_test.ipynb
 
 
-# Jupyter Notebook
+# Jupyter Notebook Checkpoints
 .ipynb_checkpoints
 
 # Caches and JetBrains stuff
