--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 absl-py==0.7.1
-appnope==0.1.0
-asgiref==3.2.7
 astor==0.7.1
 atomicwrites==1.3.0
 attrs==19.3.0
@@ -23,8 +21,6 @@ cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
 dill==0.3.1.1
-Django==3.0.5
-django-emoji==2.2.2
 docx==0.2.4
 dopamine-rl==2.0.5
 emoji==0.5.4
@@ -35,6 +31,7 @@ ffmpeg==1.4
 ffmpeg-python==0.2.0
 Flask==1.1.1
 future==0.18.2
+g2p-seq2seq==6.0.0a0
 gast==0.2.2
 gevent==1.4.0
 gin-config==0.2.1
@@ -50,13 +47,12 @@ google-pasta==0.1.8
 googleapis-common-protos==1.6.0
 greenlet==0.4.15
 grpcio==1.25.0
-gunicorn==20.0.4
+gunicorn==20.0.2
 gym==0.15.4
 h5py==2.10.0
 httplib2==0.14.0
 idna==2.8
 importlib-metadata==0.23
-inexactsearch==1.0.2
 ipykernel==5.1.3
 ipython==7.9.0
 ipython-genutils==0.2.0
@@ -87,11 +83,12 @@ mistune==0.8.4
 mock==3.0.5
 more-itertools==7.2.0
 mpmath==1.1.0
+mysqlclient==1.4.2.post1
 nbconvert==5.6.1
 nbformat==4.4.0
 nltk==3.4.1
 notebook==6.0.2
-numpy==1.18.2
+numpy==1.17.4
 oauth2client==4.1.3
 oauthlib==3.1.0
 opencv-python==4.1.2.30
@@ -100,10 +97,10 @@ packaging==19.2
 pandas==0.24.2
 pandocfilters==1.4.2
 parso==0.5.1
+Pattern==3.6
 pattern3==3.0.0
 pdfminer.six==20191110
 pdfminer3k==1.3.1
-pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==6.2.1
 pluggy==0.13.1
@@ -112,9 +109,8 @@ portend==2.6
 prometheus-client==0.7.1
 promise==2.2.1
 prompt-toolkit==2.0.10
-protobuf==3.11.3
+protobuf==3.10.0
 psutil==5.6.2
-ptyprocess==0.6.0
 py==1.8.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
@@ -127,28 +123,28 @@ Pygments==2.4.2
 pyparsing==2.4.5
 pypng==0.0.20
 pyrsistent==0.15.6
+pyspellchecker==0.4.0
 pytest==5.3.0
 python-dateutil==2.8.1
 python-docx==0.8.10
 pytz==2019.3
+pywin32==227
 pywinpty==0.5.5
 pyzmq==18.1.1
-qtconsole==4.7.2
+qtconsole==4.7.1
 QtPy==1.9.0
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
 scikit-learn==0.20.3
-scipy==1.4.1
+scipy==1.3.3
+seaborn==0.10.0
 Send2Trash==1.5.0
-silpa-common==0.3
 simplejson==3.17.0
 six==1.13.0
 sortedcontainers==2.1.0
-soundex==1.1.3
 soupsieve==1.9.5
 SpeechRecognition==3.8.1
-sqlparse==0.3.1
 StringDist==1.0.9
 sympy==1.4
 symspellpy==6.5.2
@@ -160,6 +156,8 @@ tensorflow==1.15.0
 tensorflow-datasets==1.3.0
 tensorflow-estimator==1.15.1
 tensorflow-gan==2.0.0
+tensorflow-gpu==2.1.0
+tensorflow-gpu-estimator==2.1.0
 tensorflow-hub==0.7.0
 tensorflow-metadata==0.15.1
 tensorflow-probability==0.7.0
@@ -176,8 +174,10 @@ wavinfo==1.3
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.16.0
+wget==3.2
 widgetsnbextension==3.5.1
 wincertstore==0.2
 wrapt==1.11.2
+xlrd==1.2.0
 zc.lockfile==2.0
 zipp==0.6.0
