--- a/requirements.txt
+++ b/requirements.txt
@@ -1,183 +1,169 @@
-absl-py==0.7.1
-astor==0.7.1
-atomicwrites==1.3.0
-attrs==19.3.0
+appdirs==1.4.4
+apturl==0.5.2
+aspell-python-py3==1.15
+attrs==18.2.0
 backcall==0.1.0
-backports.csv==1.0.7
-backports.functools-lru-cache==1.5
-beautifulsoup4==4.7.1
-bleach==3.1.0
+bcrypt==3.1.7
+bleach==3.1.5
+blinker==1.4
+Brlapi==0.7.0
 bz2file==0.98
-cachetools==3.1.1
-certifi==2019.9.11
-cffi==1.13.2
+cached-property==1.5.1
+cachetools==4.1.0
+certifi==2019.11.28
 chardet==3.0.4
-cheroot==6.5.5
-CherryPy==18.1.1
-Click==7.0
-cloudpickle==1.2.2
-colorama==0.4.1
+click==7.1.2
+cloudpickle==1.3.0
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
 cycler==0.10.0
-decorator==4.4.1
+dbus-python==1.2.16
+decorator==4.4.2
+defer==1.0.6
 defusedxml==0.6.0
-dill==0.3.1.1
-docx==0.2.4
-dopamine-rl==2.0.5
-emoji==0.5.4
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+docker==4.1.0
+docker-compose==1.25.0
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==0.8.12.0
+editdistance==0.5.3
 entrypoints==0.3
-enum34==1.1.6
-feedparser==5.2.1
-ffmpeg==1.4
-ffmpeg-python==0.2.0
-Flask==1.1.1
+fasteners==0.14.1
+filelock==3.0.12
+Flask==1.1.2
 future==0.18.2
-g2p-seq2seq==6.0.0a0
-gast==0.2.2
-gevent==1.4.0
-gin-config==0.2.1
-google-api-core==1.14.3
-google-api-python-client==1.7.11
-google-auth==1.7.1
+g2p-seq2seq==6.2.2a0
+gevent==20.5.1
+google-api-core==1.17.0
+google-api-python-client==1.8.4
+google-auth==1.15.0
 google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.1
-google-cloud==0.34.0
-google-cloud-speech==1.3.0
-google-cloud-texttospeech==0.4.0
-google-pasta==0.1.8
-googleapis-common-protos==1.6.0
+googleapis-common-protos==1.51.0
+gpg===1.13.1-unknown
 greenlet==0.4.15
-grpcio==1.25.0
-gunicorn==20.0.2
-gym==0.15.4
+gunicorn==20.0.4
+gym==0.17.2
 h5py==2.10.0
 httplib2==0.14.0
 idna==2.8
-importlib-metadata==0.23
-ipykernel==5.1.3
-ipython==7.9.0
+importlib-metadata==1.6.0
+indicator-sound-switcher==2.3.4
+ipykernel==5.3.0
+ipython==7.14.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 itsdangerous==1.1.0
-jaraco.functools==2.0
-jedi==0.15.1
-Jinja2==2.10.3
-json5==0.8.5
+jedi==0.17.0
+Jinja2==3.0.0a1
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==5.3.4
+jupyter-client==6.1.3
 jupyter-console==6.1.0
-jupyter-core==4.6.1
-jupyterlab==1.2.3
-jupyterlab-server==1.0.6
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kfac==0.2.0
-kiwisolver==1.1.0
-lxml==4.4.1
-Markdown==3.1.1
-MarkupSafe==1.1.1
-matplotlib==3.0.3
+jupyter-core==4.6.3
+kazam==1.4.5
+keyring==18.0.1
+kiwisolver==1.2.0
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+libevdev==0.5
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==1.1.0
+matplotlib==3.2.1
 matplotlib-venn==0.11.5
-mesh-tensorflow==0.1.5
+matplotlib2tikz==0.7.6
 mistune==0.8.4
-mock==3.0.5
-more-itertools==7.2.0
+monotonic==1.5
+more-itertools==4.2.0
 mpmath==1.1.0
-mysqlclient==1.4.2.post1
 nbconvert==5.6.1
-nbformat==4.4.0
-nltk==3.4.1
-notebook==6.0.2
-numpy==1.17.4
+nbformat==5.0.6
+netifaces==0.10.4
+notebook==6.0.3
+numpy==1.19.0rc1
 oauth2client==4.1.3
 oauthlib==3.1.0
-opencv-python==4.1.2.30
-opt-einsum==3.1.0
-packaging==19.2
-pandas==0.24.2
+olefile==0.46
+packaging==20.4
+pandas==1.0.3
 pandocfilters==1.4.2
-parso==0.5.1
-Pattern==3.6
-pattern3==3.0.0
-pdfminer.six==20191110
-pdfminer3k==1.3.1
+paramiko==2.6.0
+parso==0.7.0
+pdflatex==0.1.3
+pexpect==4.6.0
 pickleshare==0.7.5
-Pillow==6.2.1
-pluggy==0.13.1
-ply==3.11
-portend==2.6
-prometheus-client==0.7.1
-promise==2.2.1
-prompt-toolkit==2.0.10
-protobuf==3.10.0
-psutil==5.6.2
-py==1.8.0
+Pillow==7.0.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+protobuf==3.6.1
+ptyprocess==0.6.0
 pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pycparser==2.19
-pycryptodome==3.9.4
-pydub==0.23.1
-pyenchant==3.0.1
-pyglet==1.3.2
-Pygments==2.4.2
-pyparsing==2.4.5
-pypng==0.0.20
-pyrsistent==0.15.6
-pyspellchecker==0.4.0
-pytest==5.3.0
-python-dateutil==2.8.1
-python-docx==0.8.10
+pyasn1-modules==0.2.8
+pycairo==1.16.2
+pycups==1.9.73
+pyglet==1.5.0
+Pygments==2.6.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+pyrsistent==0.16.0
+pyspellchecker==0.5.4
+python-apt==2.0.0
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
 pytz==2019.3
-pywin32==227
-pywinpty==0.5.5
-pyzmq==18.1.1
-qtconsole==4.7.1
+pyudev==0.21.0
+pyxdg==0.26
+PyYAML==5.3.1
+pyzmq==19.0.1
+qtconsole==4.7.4
 QtPy==1.9.0
+reportlab==3.5.34
 requests==2.22.0
-requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
 rsa==4.0
-scikit-learn==0.20.3
-scipy==1.3.3
-seaborn==0.10.0
+scipy==1.4.1
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
 Send2Trash==1.5.0
-simplejson==3.17.0
-six==1.13.0
-sortedcontainers==2.1.0
-soupsieve==1.9.5
-SpeechRecognition==3.8.1
-StringDist==1.0.9
-sympy==1.4
-symspellpy==6.5.2
-tabulate==0.8.6
-tempora==1.14.1
+simplejson==3.16.0
+six==1.14.0
+sympy==1.6
+systemd-python==234
 tensor2tensor==1.7.0
-tensorboard==1.15.0
-tensorflow==1.15.0
-tensorflow-datasets==1.3.0
-tensorflow-estimator==1.15.1
-tensorflow-gan==2.0.0
-tensorflow-gpu==2.1.0
-tensorflow-gpu-estimator==2.1.0
-tensorflow-hub==0.7.0
-tensorflow-metadata==0.15.1
-tensorflow-probability==0.7.0
-termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
-textblob==0.15.3
-tornado==6.0.3
-tqdm==4.39.0
+texttable==1.6.2
+tikzplotlib==0.9.2
+tornado==6.0.4
+tqdm==4.46.0
 traitlets==4.3.3
-uritemplate==3.0.0
-urllib3==1.25.7
-wavinfo==1.3
-wcwidth==0.1.7
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==3.0.1
+urllib3==1.25.8
+usb-creator==0.3.7
+virtualenv==20.0.21
+wadllib==1.3.3
+wcwidth==0.1.9
 webencodings==0.5.1
-Werkzeug==0.16.0
-wget==3.2
+websocket-client==0.53.0
+Werkzeug==1.0.1
 widgetsnbextension==3.5.1
-wincertstore==0.2
-wrapt==1.11.2
-xlrd==1.2.0
-zc.lockfile==2.0
-zipp==0.6.0
+xkit==0.0.0
+zipp==3.1.0
+zope.event==4.4
+zope.interface==5.1.0
