--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+absl-py==0.9.0
 appdirs==1.4.4
 apturl==0.5.2
 aspell-python-py3==1.15
+astunparse==1.6.3
 attrs==18.2.0
 backcall==0.1.0
 bcrypt==3.1.7
@@ -31,20 +33,25 @@ dockerpty==0.4.1
 docopt==0.6.2
 duplicity==0.8.12.0
 editdistance==0.5.3
+emoji==0.5.4
 entrypoints==0.3
 fasteners==0.14.1
 filelock==3.0.12
 Flask==1.1.2
 future==0.18.2
 g2p-seq2seq==6.2.2a0
+gast==0.3.3
 gevent==20.5.1
 google-api-core==1.17.0
 google-api-python-client==1.8.4
 google-auth==1.15.0
 google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
 googleapis-common-protos==1.51.0
 gpg===1.13.1-unknown
 greenlet==0.4.15
+grpcio==1.30.0
 gunicorn==20.0.4
 gym==0.17.2
 h5py==2.10.0
@@ -65,6 +72,7 @@ jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kazam==1.4.5
+Keras-Preprocessing==1.1.2
 keyring==18.0.1
 kiwisolver==1.2.0
 language-selector==0.1
@@ -76,6 +84,7 @@ lockfile==0.12.2
 louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
+Markdown==3.2.2
 MarkupSafe==1.1.0
 matplotlib==3.2.1
 matplotlib-venn==0.11.5
@@ -92,29 +101,34 @@ numpy==1.19.0rc1
 oauth2client==4.1.3
 oauthlib==3.1.0
 olefile==0.46
+opt-einsum==3.2.1
 packaging==20.4
 pandas==1.0.3
 pandocfilters==1.4.2
 paramiko==2.6.0
 parso==0.7.0
+pbr==5.4.5
 pdflatex==0.1.3
 pexpect==4.6.0
 pickleshare==0.7.5
 Pillow==7.0.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
-protobuf==3.6.1
+protobuf==3.12.2
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycairo==1.16.2
 pycups==1.9.73
+PyDrive==1.3.1
+pyenchant==3.1.1
 pyglet==1.5.0
 Pygments==2.6.1
 PyGObject==3.36.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
 PyNaCl==1.3.0
+pyOpenSSL==19.0.0
 pyparsing==2.4.7
 pyRFC3339==1.1
 pyrsistent==0.16.0
@@ -131,6 +145,7 @@ qtconsole==4.7.4
 QtPy==1.9.0
 reportlab==3.5.34
 requests==2.22.0
+requests-oauthlib==1.3.0
 requests-unixsocket==0.2.0
 rsa==4.0
 scipy==1.4.1
@@ -139,9 +154,15 @@ SecretStorage==2.3.1
 Send2Trash==1.5.0
 simplejson==3.16.0
 six==1.14.0
+SQLAlchemy==1.3.12
+stevedore==2.0.1
 sympy==1.6
 systemd-python==234
 tensor2tensor==1.7.0
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.7.0
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 texttable==1.6.2
@@ -157,12 +178,15 @@ uritemplate==3.0.1
 urllib3==1.25.8
 usb-creator==0.3.7
 virtualenv==20.0.21
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
 wadllib==1.3.3
 wcwidth==0.1.9
 webencodings==0.5.1
 websocket-client==0.53.0
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
+wrapt==1.12.1
 xkit==0.0.0
 zipp==3.1.0
 zope.event==4.4
