--- a/requirements.txt
+++ b/requirements.txt
@@ -1,193 +1,136 @@
 absl-py==0.9.0
-appdirs==1.4.4
-apturl==0.5.2
 aspell-python-py3==1.15
+astor==0.8.1
 astunparse==1.6.3
-attrs==18.2.0
-backcall==0.1.0
-bcrypt==3.1.7
+attrs==19.3.0
+backcall==0.2.0
 bleach==3.1.5
-blinker==1.4
-Brlapi==0.7.0
 bz2file==0.98
-cached-property==1.5.1
-cachetools==4.1.0
-certifi==2019.11.28
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 cloudpickle==1.3.0
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
 cycler==0.10.0
-dbus-python==1.2.16
 decorator==4.4.2
-defer==1.0.6
 defusedxml==0.6.0
-distlib==0.3.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-docker==4.1.0
-docker-compose==1.25.0
-dockerpty==0.4.1
-docopt==0.6.2
-duplicity==0.8.12.0
+dill==0.3.2
+dopamine-rl==3.0.1
 editdistance==0.5.3
 emoji==0.5.4
 entrypoints==0.3
-fasteners==0.14.1
-filelock==3.0.12
 Flask==1.1.2
 future==0.18.2
 g2p-seq2seq==6.2.2a0
-gast==0.3.3
-gevent==20.5.1
-google-api-core==1.17.0
-google-api-python-client==1.8.4
-google-auth==1.15.0
-google-auth-httplib2==0.0.3
+gast==0.2.2
+gevent==20.6.2
+gin-config==0.3.0
+google-api-core==1.21.0
+google-api-python-client==1.10.0
+google-auth==1.19.1
+google-auth-httplib2==0.0.4
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-googleapis-common-protos==1.51.0
-gpg===1.13.1-unknown
-greenlet==0.4.15
+googleapis-common-protos==1.52.0
+greenlet==0.4.16
 grpcio==1.30.0
 gunicorn==20.0.4
-gym==0.17.2
+gym==0.9.5
 h5py==2.10.0
-httplib2==0.14.0
-idna==2.8
-importlib-metadata==1.6.0
-indicator-sound-switcher==2.3.4
-ipykernel==5.3.0
-ipython==7.14.0
+httplib2==0.18.1
+idna==2.10
+importlib-metadata==1.7.0
+ipykernel==5.3.2
+ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 itsdangerous==1.1.0
-jedi==0.17.0
-Jinja2==3.0.0a1
+jedi==0.17.1
+Jinja2==2.11.2
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.1.3
+jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
-kazam==1.4.5
+Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
-keyring==18.0.1
+kfac==0.2.0
 kiwisolver==1.2.0
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-libevdev==0.5
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
 Markdown==3.2.2
-MarkupSafe==1.1.0
-matplotlib==3.2.1
+MarkupSafe==1.1.1
+matplotlib==3.3.0
 matplotlib-venn==0.11.5
-matplotlib2tikz==0.7.6
+mesh-tensorflow==0.1.16
 mistune==0.8.4
-monotonic==1.5
-more-itertools==4.2.0
 mpmath==1.1.0
 nbconvert==5.6.1
-nbformat==5.0.6
-netifaces==0.10.4
+nbformat==5.0.7
 notebook==6.0.3
-numpy==1.19.0rc1
+numpy==1.19.0
 oauth2client==4.1.3
 oauthlib==3.1.0
-olefile==0.46
+opencv-python==4.3.0.36
 opt-einsum==3.2.1
 packaging==20.4
-pandas==1.0.3
+pandas==1.0.5
 pandocfilters==1.4.2
-paramiko==2.6.0
 parso==0.7.0
-pbr==5.4.5
-pdflatex==0.1.3
-pexpect==4.6.0
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.0.0
+Pillow==7.2.0
 prometheus-client==0.8.0
+promise==2.3
 prompt-toolkit==3.0.5
 protobuf==3.12.2
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycups==1.9.73
-PyDrive==1.3.1
 pyenchant==3.1.1
 pyglet==1.5.0
 Pygments==2.6.1
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
 pyparsing==2.4.7
-pyRFC3339==1.1
+pypng==0.0.20
 pyrsistent==0.16.0
 pyspellchecker==0.5.4
-python-apt==2.0.0
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyudev==0.21.0
-pyxdg==0.26
-PyYAML==5.3.1
+python-dateutil==2.8.1
+pytz==2020.1
 pyzmq==19.0.1
-qtconsole==4.7.4
+qtconsole==4.7.5
 QtPy==1.9.0
-reportlab==3.5.34
-requests==2.22.0
+requests==2.24.0
 requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-rsa==4.0
+rsa==4.6
 scipy==1.4.1
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
 Send2Trash==1.5.0
-simplejson==3.16.0
-six==1.14.0
-SQLAlchemy==1.3.12
-stevedore==2.0.1
-sympy==1.6
-systemd-python==234
+six==1.15.0
+sympy==1.6.1
 tensor2tensor==1.7.0
-tensorboard==2.2.2
+tensorboard==1.15.0
 tensorboard-plugin-wit==1.7.0
-tensorflow-estimator==2.2.0
+tensorflow==1.15.0
+tensorflow-addons==0.10.0
+tensorflow-datasets==3.2.1
+tensorflow-estimator==1.15.1
+tensorflow-gan==2.0.0
+tensorflow-gpu==2.2.0
+tensorflow-hub==0.8.0
+tensorflow-metadata==0.22.2
+tensorflow-probability==0.7.0
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
-texttable==1.6.2
-tikzplotlib==0.9.2
+tf-slim==1.1.0
 tornado==6.0.4
-tqdm==4.46.0
+tqdm==4.48.0
 traitlets==4.3.3
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
+typeguard==2.9.1
 uritemplate==3.0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.0.21
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-wadllib==1.3.3
-wcwidth==0.1.9
+urllib3==1.25.9
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==0.53.0
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wrapt==1.12.1
-xkit==0.0.0
 zipp==3.1.0
 zope.event==4.4
 zope.interface==5.1.0
