--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ astor==0.8.1
 astunparse==1.6.3
 attrs==19.3.0
 backcall==0.2.0
-bleach==3.1.5
+bleach>=3.3.0
 bz2file==0.98
 cachetools==4.1.1
 certifi==2020.6.20
@@ -37,7 +37,7 @@ grpcio==1.30.0
 gunicorn==20.0.4
 gym==0.9.5
 h5py==2.10.0
-httplib2==0.18.1
+httplib2>=0.19.0
 idna==2.10
 importlib-metadata==1.7.0
 ipykernel==5.3.2
